--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,6 @@ exclude = [
     "bors.toml"
 ]
 
-[workspace]
-members = ["libsodium-sys", "testcrate"]
-
 [badges]
 travis-ci = { repository = "sodiumoxide/sodiumoxide" }
 appveyor = { repository = "Dylan-DPC/sodiumoxide", id = "u05iy6wufw9ncdi7" }
@@ -25,7 +22,7 @@ coveralls = { repository = "sodiumoxide/sodiumoxide" }
 
 [dependencies]
 libc = { version = "^0.2.41" , default-features = false }
-libsodium-sys = { version = "0.2.4", path = "libsodium-sys" }
+libsodium-sys = { package = "libsodium-sys-stable", version = "1.20.4" }
 serde = { version = "^1.0.59", default-features = false, optional = true }
 
 [dev-dependencies]
